0922 1911 忽 關閉註解

--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -264,7 +264,7 @@
                             var coupon = parseInt(myCoupon.innerText);
                             $('.trHtml').remove();
                             res.map((item) => {
-                                console.log(item)
+                                // console.log(item)
                                 // 計算預計配送日期(單次配訂單成立日期+3天後 / 周周配根據使用者輸入禮拜一或禮拜三，隔周開始配送)
                                 var shippingDateArr = [];
                                 // console.log(item.o_ceatetime.split('T')[0])
