--- a/views/product.ejs
+++ b/views/product.ejs
@@ -64,10 +64,13 @@
                     <% } %>
                   </div>
                   <div class="smtext">
-                    <h5 class="vg-h4">貼心小叮嚀</h5>
+                    <h5 class="vg-h4">小叮嚀</h5>
 
                     <p class="vg-h5">
                       蔬果:<span class="vg-p ms-2 productInfo"></span>
+                    </p>
+                    <p class="vg-h5">
+                      產地:<span class="vg-p ms-2 saveOrigin"></span>
                     </p>
                     <p class="vg-h5">
                       保存方法:<span class="vg-p ms-2 saveInfo"></span>
@@ -357,8 +360,6 @@
                       >為您服務
                     </li>
                   </ul>
-
-                  <p class="vg-p">蔬菜內容以當季蔬菜組裝出貨！</p>
                 </div>
                 <div class="middle_Con">
                   <h5 class="vg-h5">最新活動</h5>
