--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -331,8 +331,10 @@
                                 item.size == 's' ? fee = 160 : fee = 290; // 運費 (S-160 L-290)
                                 item.size == 's' ? item.size = '雙人箱(1~2人)' : item.size = '家庭箱(3~4人)';
                                 item.c_option ? item.c_option = item.c_option.split(',').slice(1,) : item.c_option = '';
+
+                                // 設定自選箱價格
                                 if (item.product.includes('自選')) {
-                                    item.price = localStorage.getItem('optionPrice');
+                                    item.price = localStorage.getItem(`optionPrice${item.cid}`);
                                     item.content = item.c_option
                                 }
 
