--- a/views/m_bonus.ejs
+++ b/views/m_bonus.ejs
@@ -29,10 +29,11 @@
               50
               <small class="vg-ps"> 可使用的綠苗點</small>
             </p>
-            <p class="vg-ps">
-              <small class="text-muted" data-bs-toggle="tooltip" data-bs-placement="bottom" title="期限為您獲得的月份加上一個月的最後一天，請記得於期限前使用完畢!">
-                2023-11-04 到期
+            <p class="vg-ps exp" data-bs-toggle="tooltip" data-bs-placement="bottom" title="期限為您獲得的月份加上一個月的最後一天，請記得於期限前使用完畢!">
+              <small class="text-muted">
+                2023-11-04
               </small>
+              到期
             </p>
           </div>
           <a href="/activityboard">
