--- a/lib/css/memb.css
+++ b/lib/css/memb.css
@@ -275,7 +275,7 @@ body {
 
 /* content */
 .memb-content {
-    width: 100%;
+    /* width: 100%; */
     padding: 53px 42px 53px 55px;
     margin-top: 10px;
     margin-bottom: 70px;
