--- a/views/m_article.ejs
+++ b/views/m_article.ejs
@@ -24,7 +24,7 @@
 
       <!-- content -->
       <div class="memb-content">
-        <h4 class="vg-h4">收藏的文章</h4>
+        <h4 class="vg-h4">個人收藏</h4>
     
         <div class="article-card card mb-3">
           <a href="/blog/inside/1">
