--- a/views/m_bonus.ejs
+++ b/views/m_bonus.ejs
@@ -20,7 +20,7 @@
     
     <!-- contents -->
     <div class="memb-content">
-      <h4 class="vg-h4">我的綠苗點</h4>
+      <h4 class="vg-h4">我的VG點</h4>
   
       <div class="memb-coinRC">
         <div class="card-header d-flex">
