--- a/views/m_mycards.ejs
+++ b/views/m_mycards.ejs
@@ -24,7 +24,7 @@
 
         <!-- content -->
         <div class="memb-content">
-          <h4 class="vg-h4">我的信用卡</h4>
+          <h4 class="vg-h4">信用卡</h4>
           
           <div class="memb-credit card">
             <div class="card-header d-flex">
