--- a/views/share/header.ejs
+++ b/views/share/header.ejs
@@ -1,5 +1,5 @@
 <nav id="main-nav">
-  <span id="userName" class="vg-ps"></span>
+  <span id="userName"></span>
   <button id="logoutBTN" class="btn btn-vg-sm">登出</button>
   <a href="#" class="icon" id="navUser">
     <i class="fa-solid fa-user"></i>
