--- a/views/share/m_multF.ejs
+++ b/views/share/m_multF.ejs
@@ -1,5 +1,5 @@
 <div class="div-refer memb-multF">
-    <!-- <div class="test">
+    <div class="test">
       <h5 class="vg-h5 fw-semibold">蔬果曆</h5>
     </div>
 
@@ -68,6 +68,6 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
   </div>
 </div>
