--- a/views/order.ejs
+++ b/views/order.ejs
@@ -161,9 +161,9 @@
                                                         <label for="homeTel">手機</label>
                                                     </div>
                                                     <div class="twzipcode text-start m-2">
-                                                        <select data-role="county" class="form-select-sm w-25"></select>
+                                                        <select data-role="county" class="form-select-sm w-25" id="county"></select>
                                                         <select data-role="district"
-                                                            class="form-select-sm w-25"></select>
+                                                            class="form-select-sm w-25" id="district"></select>
                                                         <input type="hidden" data-role="zipcode" />
                                                     </div>
                                                     <div class="form-floating form-group m-2">
@@ -460,10 +460,11 @@
             <script>
                 // 地址套件 
                 var myzip = '';
+                var myzipcode = '';
                 let twzipcode = new TWzipcode({
                     "district": {
                         onChange: function (id) {
-                            // console.log( this.nth(id).get() );
+                            myzipcode = this.nth(id).get().zipcode
                             myzip = `${this.nth(id).get().county}${this.nth(id).get().district}`
                             // console.log(myzip)
                         }
@@ -539,10 +540,11 @@
                             item.freq = '雙周一次'
                         }
 
-                         // 設定自選箱價格
-                         if (item.product.includes('自選')) {
-                                    item.price = localStorage.getItem(`optionPrice${item.cid}`);
-                                }
+                         // 設定自選箱價格(根據localstorege)
+                        //  if (item.product.includes('自選')) {
+                        //             item.price = localStorage.getItem(`optionPrice${item.cid}`);
+                        //             item.price = item.money;
+                        //         }
 
                         if (item.size == '雙人箱(1~2人)' && item.freq == '單次購買') {
                             item.price = parseInt(item.price) * item.quantity
@@ -557,6 +559,9 @@
                         } else {
                             item.price = ((parseInt(item.price) + 200) * 4) * item.quantity
                         }
+
+                        // 設定自選箱價格(根據cart資料表)
+                        item.product.includes('自選') ? item.price = parseInt(item.money) : item.price = parseInt(item.price);
 
                         var trHtml = `
                             <tr>
@@ -576,10 +581,10 @@
                         shippingfee += fee;
                         total += item.price;
 
-                        if (item.c_option != null && item.c_option.includes(',')) {
-                            item.c_option = item.c_option.split(',').slice(1,);
+                        if (item.con != null && item.con.includes(',')) {
+                            // item.c_option = item.c_option.split(',').slice(1,);
                             // console.log(item.c_option);
-                            $(`#aa${item.cid}`).append(`<br/><i class="vg-ps">${item.c_option}</i><br/>`)
+                            $(`#aa${item.cid}`).append(`<br/><i class="vg-ps">${item.con}</i><br/>`)
                         }
                     })
                     // 運費計算
@@ -673,7 +678,7 @@
                             <td class="pt-3"><input type="radio" name="myAddr" id=${item.Name}></td>
                             <td class="pt-3"><label for=${item.Name}>${item.Name}</label></td>
                             <td class="pt-3"><label for=${item.Name}>${item.Phone}</label></td>
-                            <td class="pt-3"><label for=${item.Name}>${item.address}</label></td>
+                            <td class="pt-3"><label for=${item.Name}>${item.zipcode}${item.country}${item.address}</label></td>
                             </tr>`
                                 })
                                 $('#myAddrrows').append(trHtml);
@@ -700,6 +705,9 @@
 
                     // 點選 更新到常用地址(收件資料) 的功能(insert)
                     $('#updatemyaddress').on('click', () => {
+                        console.log(district.value.slice(0,3))
+                        console.log(myzip)
+                        console.log(homeAdd.value)
                         Swal.fire({
                             title: '確定要更新到常用地址?',
                             text: '本動作無法復原',
@@ -720,7 +728,9 @@
                                         uid: uid,
                                         name: homeName.value,
                                         phone: homeTel.value,
-                                        address: rAddr.value
+                                        zipcode: myzipcode,
+                                        country: myzip,
+                                        address: homeAdd.value
                                     })
                                 })
                             } else {
