--- a/views/orderconfirm.ejs
+++ b/views/orderconfirm.ejs
@@ -174,10 +174,11 @@
                                 item.freq = '雙周一次'
                             }
 
-                            // 設定自選箱價格
-                            if ( item.product.includes('自選')) {
-                                item.price = localStorage.getItem(`optionPrice${item.cid}`);
-                            }
+                            // 設定自選箱價格(根據localstorage)
+                            // if ( item.product.includes('自選')) {
+                            //     item.price = localStorage.getItem(`optionPrice${item.cid}`);
+                            //     item.price = item.money;
+                            // }
 
                             if (item.size == '雙人箱(1~2人)' && item.freq == '單次購買') {
                                 item.price = parseInt(item.price) * item.quantity
@@ -192,6 +193,9 @@
                             } else {
                                 item.price = ((parseInt(item.price) + 200) * 4) * item.quantity
                             }
+
+                            // 設定自選箱價格(根據cart資料表)
+                            item.product.includes('自選') ? item.price = parseInt(item.money) : item.price = parseInt(item.price);
 
                             var trHtml = `
                             <tr>
@@ -211,10 +215,10 @@
                             shippingfee += fee;
                             total += item.price;
                             // console.log(item.c_option)
-                            if (item.c_option != null && item.c_option.includes(',')) {
-                                item.c_option = item.c_option.split(',').slice(1,);
+                            if (item.con != null && item.con.includes(',')) {
+                                // item.c_option = item.c_option.split(',').slice(1,);
                                 // console.log(item.c_option);
-                                $(`#aa${item.cid}`).append(`<br/><i class="vg-ps">${item.c_option}</i><br/>`)
+                                $(`#aa${item.cid}`).append(`<br/><i class="vg-ps">${item.con}</i><br/>`)
                             }
                         })
                         // 運費計算
