--- a/views/m_order.ejs
+++ b/views/m_order.ejs
@@ -58,10 +58,10 @@
                   </div>
                 </a>
   
-                <div class="col-11">
+                <div class="col-10">
                   <span>訂單狀態: 已完成</span>
                 </div>
-                <div class="col-1">
+                <div class="col-2 total">
                   <span>$500</span>
                 </div>
               </li>
@@ -100,10 +100,10 @@
                   </div>
                 </a> -->
   
-                <div class="col-11">
+                <div class="col-10">
                   <span>訂單狀態: 配送中</span>
                 </div>
-                <div class="col-1">
+                <div class="col-2 total">
                   <span>$1700</span>
                 </div>
               </li>
