--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -161,7 +161,7 @@
                     </div>
                     <div class="d-flex justify-content-center searchMore">
                         <h5 class="vg-h4">進階搜尋</h5>
-                        <button class="btn btn-vg-sm"><i class="bi bi-caret-down-square-fill ps-2"></i></button>
+                        <button class="btn btn-vg-sm"><i class="bi bi-caret-down-square-fill"></i></button>
                     </div>
                     <div class="searchMoredown">
                         <div class="m-3">
