--- a/views/orderconfirm.ejs
+++ b/views/orderconfirm.ejs
@@ -165,6 +165,8 @@
 
                             item.size == 's' ? fee = 160 : fee = 290; // 運費 (S-160 L-290)
                             item.size == 's' ? item.size = '雙人箱(1~2人)' : item.size = '家庭箱(3~4人)';
+                            item.day? item.day = item.day: item.day = '';
+                            
                             if (item.freq == 'once') {
                                 item.freq = '單次購買';
                                 item.day = "";
