--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -333,6 +333,7 @@
                                 item.size == 's' ? item.size = '雙人箱(1~2人)' : item.size = '家庭箱(3~4人)';
                                 // item.c_option ? item.c_option = item.c_option.split(',').slice(1,) : item.c_option = '';
                                 item.con ? item.con = item.con : item.con = '';
+                                item.day? item.day = item.day: item.day = '';
 
                                 // 設定自選箱價格(根據localStorage)
                                 // if (item.product.includes('自選')) {
