--- a/views/rateorder.ejs
+++ b/views/rateorder.ejs
@@ -93,7 +93,7 @@
                                         });
                                         e.map((item) => {
                                             var spanHtml = `
-                                    <span class="rateitem">${item.product}</span>
+                                    <span class="rateitem p-2" style="background-Color: rgb(204, 220, 172)">${item.product}</span>
                                     `;
                                             $('#rateitems').append(spanHtml)
                                             // console.log(item.pname)
