--- a/lib/css/cart.css
+++ b/lib/css/cart.css
@@ -44,7 +44,7 @@
     text-align: center;
     line-height: 20px;
     background-color: var(--primary);
-    color: white;
+    color: rgb(42, 42, 42);
 }
 
 .rateclose-btn {
